<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <FrameLayout
        android:id="@+id/overviewFrame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:transitionGroup="false"
        android:visibility="visible">

        <Button
            android:id="@+id/clearFilesButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|bottom"
            android:layout_marginLeft="120dp"
            android:text="@string/logDeleteAllLogs"
            android:visibility="visible"
            tools:ignore="RtlHardcoded" />

        <FrameLayout
            android:id="@+id/listFrame"
            android:layout_width="match_parent"
            android:layout_height="470dp"
            android:layout_gravity="center_horizontal|top">

            <ListView
                android:id="@+id/allLogsViewer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left|top"
                android:visibility="visible" />

        </FrameLayout>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/logFrame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="left|top"
        android:visibility="gone">

        <TextView
            android:id="@+id/logDisplayer"
            android:layout_width="match_parent"
            android:layout_height="470dp" />

        <Button
            android:id="@+id/returnButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="200dp"
            android:text="@string/logReturn" />

        <Button
            android:id="@+id/deleteCurrentLogButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="90dp"
            android:text="@string/logDelete" />
    </FrameLayout>

    <TextView
        android:id="@+id/noLogsText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logNoLogs"
        android:textSize="20dp"
        android:visibility="gone" />

</LinearLayout>
