<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:id="@+id/settings_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/nav_top_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:focusable="false"
            android:paddingTop="10dp"
            android:text="@string/settingsActionMenuTitle"
            android:textColor="@color/white" />

        <!-- Line divider -->
        <LinearLayout
            android:id="@+id/top_line_div_layout"
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="#33000000"
            android:focusable="false"
            android:orientation="horizontal" />

        <FrameLayout
            android:id="@+id/enable_nav_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <Switch
                android:id="@+id/enable_nav_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:text="@string/settingsNavigationSwitchTitle"
                android:textSize="8pt" />
        </FrameLayout>

        <!-- Line divider -->
        <LinearLayout
            android:id="@+id/enable_nav_line_div_layout"
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="#33000000"
            android:focusable="false"
            android:orientation="horizontal" />

        <FrameLayout
            android:id="@+id/config_buttons_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/load_active_config_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="15dp"
                android:text="@string/settingsActiveConfigButtonTitle"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/load_default_config_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="15dp"
                android:text="@string/settingsDefaultConfigButtonTitle" />
        </FrameLayout>

        <!-- Line divider -->
        <LinearLayout
            android:id="@+id/config_buttons_line_div_layout"
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="#33000000"
            android:focusable="false"
            android:orientation="horizontal" />

        <TextView
            android:id="@+id/sense_touch_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:focusable="false"
            android:paddingTop="10dp"
            android:text="@string/settingsSenseTouchMenuTitle"
            android:textColor="@color/white" />

        <!-- Line divider -->
        <LinearLayout
            android:id="@+id/sense_touch_heading_line_div_layout"
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="#33000000"
            android:focusable="false"
            android:orientation="horizontal" />

        <RelativeLayout
            android:id="@+id/sense_touch_config_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:focusable="false"
            android:paddingTop="15dp"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/hardpress_threshold_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:focusable="false"
                android:paddingEnd="1dp"
                android:paddingStart="10dp"
                android:text="@string/settingsHardPressThresholdTitle" />

            <TextView
                android:id="@+id/hardpress_threshold_value_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/hardpress_threshold_seekbar"
                android:focusable="false"
                android:textColor="@color/black"
                android:textSize="6.5pt" />

            <SeekBar
                android:id="@+id/hardpress_threshold_seekbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/hardpress_threshold_text_view"
                android:layoutDirection="rtl"
                android:max="255"
                android:mirrorForRtl="true"
                android:progress="0"
                android:thumb="@drawable/thumb_slider"
                android:layout_alignParentTop="true" />
        </RelativeLayout>
        <!-- Line divider -->
        <LinearLayout
            android:id="@+id/sense_touch_line_div_layout"
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="#33000000"
            android:focusable="false"
            android:orientation="horizontal" />

        <TextView
            android:id="@+id/nav_config_heading_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:focusable="false"
            android:paddingTop="10dp"
            android:text="@string/settingsSectionTitle"
            android:textColor="@color/white" />

        <!-- Line divider -->
        <LinearLayout
            android:id="@+id/nav_config_heading_line_div_layout"
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="#33000000"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:orientation="horizontal" />

        <FrameLayout
            android:id="@+id/nav_config_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <com.fingerprints.navigationtest.view.NonScrollListView
                android:id="@+id/nav_config_param_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|top"
                android:clickable="false"
                android:fastScrollEnabled="false"
                android:isScrollContainer="false" />
        </FrameLayout>
    </LinearLayout>
</ScrollView>
