<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical|center_horizontal">

    <!-- Start View -->
    <RelativeLayout
        android:id="@+id/demoStartLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/demoChoices"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Switch
                android:id="@+id/senseTouchSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginTop="10dp"
                android:focusableInTouchMode="true"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/demoSenseTouchSwitchTitle"
                android:textSize="8pt" />
            <!-- Line divider -->
            <RelativeLayout
                android:id="@+id/senseTouchLineDivider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/senseTouchSwitch"
                android:layout_marginTop="10dp"
                android:background="#33000000" />
        </RelativeLayout>

        <Button
            android:id="@+id/startDemoButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:text="@string/testmodeStartButton"
            android:visibility="visible" />
    </RelativeLayout>

    <!-- Running View -->
    <RelativeLayout
        android:id="@+id/demoRunningLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="false"
        android:focusableInTouchMode="false">

        <ImageView
            android:id="@+id/imageViewDemo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:contentDescription="@string/demoImageViewDesc"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:visibility="visible" />

        <RelativeLayout
            android:id="@+id/forceBarLayout"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_alignParentBottom="true"
            android:focusable="false"
            android:focusableInTouchMode="false">

            <TextView
                android:id="@+id/forceBarText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/forceBarBack"
                android:layout_marginLeft="8dp"
                android:text="@string/demoForceBarTitle"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/forceBarValueText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/forceBarBack"
                android:layout_toRightOf="@+id/forceBarText"
                android:textColor="@color/black" />

            <ImageView
                android:id="@+id/forceBarBorder"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="6.5dp"
                android:layout_marginLeft="6.5dp"
                android:layout_marginRight="6.5dp"
                android:background="@color/lightGrey" />

            <ImageView
                android:id="@+id/forceBarBack"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@color/black" />

            <com.fingerprints.navigationtest.view.ForceBarView
                android:id="@+id/forceBarView"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp" />
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>
